--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <li><a href="#Project">Project</a></li>
             <li><a href="#contact">Contact</a></li>
             <li>|</li>
-            <a href="https://github.com/July186"><img src="../aset/github-logo.png" alt=""></a>
-            <a href="https://www.instagram.com/raditiyajuliano/"><img src="../aset/instagram.png" alt=""></a>
+            <a href="https://github.com/July186"><img src="aset/github-logo.png" alt=""></a>
+            <a href="https://www.instagram.com/raditiyajuliano/"><img src="aset/instagram.png" alt=""></a>
         </ul>
     </nav>
     <!--End-->
@@ -42,13 +42,13 @@
         </div>
         <div class="content-wrapper">
             <div class="about-photo">
-                <img src="../aset/Foto saya.jpg" alt="About Me Photo">
+                <img src="aset/Foto saya.jpg" alt="About Me Photo">
             </div>
             <div class="about-text">
                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin pharetra nonummy pede. Mauris et orci. Aenean nec lorem.
                 In porttitor. Donec laoreet nonummy augue. Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc. Mauris eget neque at sem venenatis eleifend. Ut nonummy. Fusce aliquet pede non pede. Suspendisse dapibus lorem pellentesque magna. Integer nulla. Donec blandit feugiat ligula. Donec hendrerit, felis et imperdiet euismod, purus ipsum pretium metus, in lacinia nulla nisl eget sapien.
                 </p>
-                <a download href="../aset/Desktop - 1.pdf">
+                <a download href="aset/Desktop - 1.pdf">
                     <button class="download-button">Download CV</button>
                 </a>
             </div>
@@ -62,27 +62,27 @@
         <h2 class="skill-text">My Skill</h2>
         
         <div class="Skill-container">
-            <img src="../aset/css3.png" alt="css" class="logo-skill">
+            <img src="aset/css3.png" alt="css" class="logo-skill">
             <p class="text-skill">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est.</p>
         </div>
 
         <div class="Skill-container">
-            <img src="../aset/html-5.png" alt="html" class="logo-skill">
+            <img src="aset/html-5.png" alt="html" class="logo-skill">
             <p class="text-skill">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est.</p>
         </div>
 
         <div class="Skill-container">
-            <img src="../aset/java-script.png" alt="javascript" class="logo-skill">
+            <img src="aset/java-script.png" alt="javascript" class="logo-skill">
             <p class="text-skill">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est.</p>
         </div>
 
         <div class="Skill-container">
-            <img src="../aset/illustrator.png" alt="Adobe Ilustrator" class="logo-skill">
+            <img src="aset/illustrator.png" alt="Adobe Ilustrator" class="logo-skill">
             <p class="text-skill">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est.</p>
         </div>
 
         <div class="Skill-container">
-            <img src="../aset/figma.png" alt="Figma" class="logo-skill">
+            <img src="aset/figma.png" alt="Figma" class="logo-skill">
             <p class="text-skill">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est.</p>
         </div>
         </div>
@@ -95,7 +95,7 @@
         <h2>Project</h2>
 
         <div class="container-right">
-            <img src="../aset/Screenshot 2024-11-07 222521.png" alt="">
+            <img src="aset/Screenshot 2024-11-07 222521.png" alt="">
             <div>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est.</p>
             <a href="https://www.figma.com/design/hg0AXNpRotlQQZef04jwH6/project?node-id=0-1&t=cm8D3ogdTA8x4BHs-1" class="see-project">See Project</a>
@@ -103,7 +103,7 @@
         </div>
 
         <div class="container-left">
-            <img src="../aset/Screenshot 2024-11-07 222521.png" alt="">
+            <img src="aset/Screenshot 2024-11-07 222521.png" alt="">
             <div>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est.</p>
             <a href="https://www.figma.com/design/hg0AXNpRotlQQZef04jwH6/project?node-id=0-1&t=cm8D3ogdTA8x4BHs-1" class="see-project">See Project</a>
@@ -111,7 +111,7 @@
         </div>
         
         <div class="container-right">
-            <img src="../aset/Screenshot 2024-11-07 222521.png" alt="">
+            <img src="aset/Screenshot 2024-11-07 222521.png" alt="">
             <div>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est.</p>
             <a href="https://www.figma.com/design/hg0AXNpRotlQQZef04jwH6/project?node-id=0-1&t=cm8D3ogdTA8x4BHs-1" class="see-project">See Project</a>
@@ -119,7 +119,7 @@
         </div>
 
         <div class="container-left">
-            <img src="../aset/Screenshot 2024-11-07 222521.png" alt="">
+            <img src="aset/Screenshot 2024-11-07 222521.png" alt="">
             <div>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna. Nunc viverra imperdiet enim. Fusce est.</p>
             <a href="https://www.figma.com/design/hg0AXNpRotlQQZef04jwH6/project?node-id=0-1&t=cm8D3ogdTA8x4BHs-1" class="see-project">See Project</a>
@@ -147,8 +147,8 @@
     <footer>
         <p>&copy; 2023 Made by me</p>
         <ul>
-            <a href="https://github.com/July186"><img src="../aset/github-logo.png" alt=""></a>
-            <a href="https://www.instagram.com/raditiyajuliano/"><img src="../aset/instagram.png" alt=""></a>
+            <a href="https://github.com/July186"><img src="aset/github-logo.png" alt=""></a>
+            <a href="https://www.instagram.com/raditiyajuliano/"><img src="aset/instagram.png" alt=""></a>
         </ul>
     </footer>
     <!--End-->
